Some quick responsive fixes. Still no contact info on mobile

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -15,17 +15,48 @@ body
   @media (max-width: 800px)
     width: 85%
 
+  &__Info
+    font-size: 1.2em
+    font-family: "Rubik"
+    display: flex
+    justify-content: center
+    background-color: white
+    width: 100%
+    max-width: 100%
+    padding: 5px
+
+    @media (max-width: 800px)
+      display: none
+
+    > a
+      text-decoration: none
+
+      &:hover
+        letter-spacing: 5px
+
+    > *
+      padding: 15px
+      color: lighten(gray, 10)
+      font-size: 0.65em
+      letter-spacing: 2.4px
+      font-weight: 500
+      text-transform: uppercase
+      transition: 0.4s all
+
+    > p
+      color: darken(gray, 10)
+
   &__Container
     display: flex
     flex-direction: column
 
     &--Upper
-      padding-top: 10em
+      padding-top: 8em
       display: flex
       flex-direction: row
 
       @media (max-width: 1400px)
-        padding-top: 3em
+        padding-top: 7em
         flex-direction: column
 
     &--Lower
