--- a/src/styles/work-item.sass
+++ b/src/styles/work-item.sass
@@ -13,6 +13,9 @@
     box-shadow: 0 10px 20px rgba(0,0,0,0.10), 0 6px 6px rgba(0,0,0,0.05)
     padding: 20px 30px
 
+    a
+      color: black
+
     > p
       color: darken(gray, 10)
       line-height: 30px
@@ -69,6 +72,16 @@
   &__Header
     display: flex
     align-items: center
+
+    @media (max-width: 900px)
+      flex-direction: column
+      align-items: center
+
+      &__Item
+        padding: 10px 0px
+
+        &:last-child
+          padding-bottom: 20px
 
     &__Item
       padding-right: 15px
